# ECAA

./: .gitignore  AGENTS.md  README.md
ArduinoRotatorFirmware_ver1008/: ArduinoRotatorFirmware_ver1008.ino  init.ino  serial.ino  utils.ino
ESP8266RotatorFirmware/: ESP8266RotatorFirmware.ino  README.md  mock-control-page.html
driver/: scopefocusRotatorDriver.sln
driver/RotatorTest/: Form1.Designer.cs  Form1.cs  RotatorTest.csproj
driver/RotatorTest/Properties/: Resources.Designer.cs  Settings.Designer.cs
driver/scopefocusRotatorDriver/: Driver.cs  RotatorConnection.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs  scopefocusRotatorDriver.csproj  sedirkRotator Setup.iss  sedirkRotator Test.js
driver/scopefocusRotatorDriver/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
indi_driver/: CMakeLists.txt  README.md  indi_ecaa_rotator.cpp  indi_ecaa_rotator.h
m42/: caja_rotador.stl  pulley_rotator.stl  rotador_astroquinta_v1.stl  tapa_caja_rotador.stl
m54/: m54 cover.SLDPRT  m54 cover.STL  m54 gear.SLDPRT  m54 gear.STL  m54_v2.1_B.SLDPRT  m54_v2.1_B.STL  m54_v2.SLDPRT  m54_v2.STL
nina_de_rotator_plugin/: AltAzDeRotator.csproj  AssemblyInfo.cs  DeRotationService.cs  DeRotationSettingsView.xaml  DeRotationSettingsView.xaml.cs  DeRotationViewModel.cs  LICENSE  MathEngine.cs  PluginManifest.cs  README.md  Resources.xaml  Resources.xaml.cs  UserGuide.md  manifest.json
